Completed install TF on CentOS 6 doc